add vs code, working on spyder